# vla_finetuning

./: .clang-format  .gitignore
src/robot_teleop/: CMakeLists.txt  package.xml
src/robot_teleop/include/robot_teleop/: controller.hpp  hdf5_saver.hpp  mujoco_sim.hpp
src/robot_teleop/mujoco/: scene.xml
src/robot_teleop/src/: controller.cpp  data_collection.cpp  hdf5_saver.cpp  mujoco_sim.cpp
src/sim/: CMakeLists.txt  package.xml
src/sim/include/sim/: controller.hpp  hdf5_saver.hpp  mujoco_sim.hpp
src/sim/mujoco/: scene.xml
src/sim/mujoco/franka_emika_panda/: panda.xml
src/sim/src/: controller.cpp  data_collection.cpp  hdf5_saver.cpp  mujoco_sim.cpp  run_sim.cpp
