<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim</name>
  <version>0.0.0</version>
  <description>Package to simulate and control robotic arm</description>
  <maintainer email="usamasattar.3347@gmail.com">Usama Sattar</maintainer>
  <license>Apache-2.0</license>

  <build_depend>libglfw3-dev</build_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>hdf5</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
